--- a/FrontHotel/pages/camarera-dashboard.html
+++ b/FrontHotel/pages/camarera-dashboard.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8">
   <title>Hotel Housekeeping - Mis Habitaciones</title>
   <!-- Indica a Safari que la aplicación puede ejecutarse en modo fullscreen/standalone -->
-<meta name="apple-mobile-web-app-capable" content="yes">
-<!-- Define el estilo de la barra de estado (hora, batería) en iOS -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<!-- Icono principal de alta resolución para la pantalla de inicio de iOS -->
-<link rel="apple-touch-icon" href="../images/icons/180.png" sizes="180x180">
-<!-- Opcional: Icono sin el efecto de brillo que Safari aplica por defecto (si quieres control
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- Define el estilo de la barra de estado (hora, batería) en iOS -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <!-- Icono principal de alta resolución para la pantalla de inicio de iOS -->
+  <link rel="apple-touch-icon" href="../images/icons/180.png" sizes="180x180">
+  <!-- Opcional: Icono sin el efecto de brillo que Safari aplica por defecto (si quieres control
 total) -->
-<link rel="apple-touch-icon-precomposed"
-href="../images/icons/180.png">
+  <link rel="apple-touch-icon-precomposed" href="../images/icons/180.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
-  >
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
   <!-- Estilos propios -->
   <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body class="bg-body-tertiary">
 
   <!-- NAVBAR / TOPBAR -->
@@ -51,11 +46,8 @@ href="../images/icons/180.png">
           <span class="text-muted" style="font-size:.8rem;">Camarera</span>
         </div>
 
-        <button 
-            class="btn btn-sm btn-outline-secondary rounded-circle"
-            onclick="logout()"
-            >
-            <i class="bi bi-box-arrow-right"></i>
+        <button class="btn btn-sm btn-outline-secondary rounded-circle" onclick="logout()">
+          <i class="bi bi-box-arrow-right"></i>
         </button>
 
       </div>
@@ -72,13 +64,13 @@ href="../images/icons/180.png">
 
           <!-- Tabs Mis Habitaciones / Todas -->
           <div class="btn-group w-100 mb-3" role="group" aria-label="Filtro principal">
-  <button type="button" class="btn filter-main-btn active" id="btnMisHabitaciones">
-    Mis Habitaciones
-  </button>
-  <button type="button" class="btn filter-main-btn" id="btnTodasHabitaciones">
-    Todas
-  </button>
-</div>
+            <button type="button" class="btn filter-main-btn active" id="btnMisHabitaciones">
+              Mis Habitaciones
+            </button>
+            <button type="button" class="btn filter-main-btn" id="btnTodasHabitaciones">
+              Todas
+            </button>
+          </div>
 
 
           <!-- Chips de estado (scroll horizontal en móvil) -->
@@ -103,114 +95,94 @@ href="../images/icons/180.png">
 
     <!-- ======= Lista de habitaciones ======= -->
     <section class="house-room-list" id="roomList">
-        <!-- Se llena por JS -->
+      <!-- Se llena por JS -->
 
     </section>
 
   </main>
   <!-- Modal Reportar Incidente -->
-<div class="modal fade incident-modal" id="incidentModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content">
+  <div class="modal fade incident-modal" id="incidentModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
 
-      <div class="modal-header border-0 pb-0">
-        <h5 class="modal-title fw-bold" id="incidentModalTitle">Reportar Incidente</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-
-      <div class="modal-body pt-3">
-        <!-- Descripción -->
-        <div class="mb-3">
-          <label class="form-label fw-semibold small">Descripción del problema</label>
-          <textarea
-            id="incidentDescription"
-            class="form-control incident-textarea"
-            rows="4"
-            placeholder="Describa el daño o problema encontrado..."
-          ></textarea>
+        <div class="modal-header border-0 pb-0">
+          <h5 class="modal-title fw-bold" id="incidentModalTitle">Reportar Incidente</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
-        <!-- Fotos -->
-<div class="mb-3">
-  <label class="form-label fw-semibold small">Fotos (Máx 3)</label>
+        <div class="modal-body pt-3">
+          <!-- Descripción -->
+          <div class="mb-3">
+            <label class="form-label fw-semibold small">Descripción del problema</label>
+            <textarea id="incidentDescription" class="form-control incident-textarea" rows="4"
+              placeholder="Describa el daño o problema encontrado..."></textarea>
+          </div>
 
-  <div class="d-flex flex-column gap-2">
+          <!-- Fotos -->
+          <div class="mb-3">
+            <label class="form-label fw-semibold small">Fotos (Máx 3)</label>
 
-    <!-- Botón grande para activar la cámara -->
-    <button
-      type="button"
-      class="photo-upload-box d-flex flex-column align-items-center justify-content-center border-0 bg-transparent"
-      id="incidentUploadBox"
-    >
-      <i class="bi bi-camera mb-1"></i>
-      <span class="small">Usar cámara</span>
-    </button>
+            <div class="d-flex flex-column gap-2">
 
-    <!-- Contenedor de la cámara -->
-    <div id="incidentCameraContainer" class="mt-2 d-none">
-      <video
-        id="incidentVideo"
-        autoplay
-        playsinline
-        class="w-100 rounded border"
-        style="max-height: 260px; background:#000;"
-      ></video>
+              <!-- Botón grande para activar la cámara -->
+              <button type="button"
+                class="photo-upload-box d-flex flex-column align-items-center justify-content-center border-0 bg-transparent"
+                id="incidentUploadBox">
+                <i class="bi bi-camera mb-1"></i>
+                <span class="small">Usar cámara</span>
+              </button>
 
-      <div class="d-flex justify-content-center gap-2 mt-2">
-        <button
-          type="button"
-          class="btn btn-sm btn-outline-secondary"
-          id="incidentSwitchCamera"
-        >
-          Cambiar cámara
-        </button>
-        <button
-          type="button"
-          class="btn btn-sm btn-primary"
-          id="incidentTakePhoto"
-        >
-          Tomar foto
-        </button>
+              <!-- Contenedor de la cámara -->
+              <div id="incidentCameraContainer" class="mt-2 d-none">
+                <video id="incidentVideo" autoplay playsinline class="w-100 rounded border"
+                  style="max-height: 260px; background:#000;"></video>
+
+                <div class="d-flex justify-content-center gap-2 mt-2">
+                  <button type="button" class="btn btn-sm btn-outline-secondary" id="incidentSwitchCamera">
+                    Cambiar cámara
+                  </button>
+                  <button type="button" class="btn btn-sm btn-primary" id="incidentTakePhoto">
+                    Tomar foto
+                  </button>
+                </div>
+              </div>
+
+              <!-- Previsualizaciones de fotos capturadas -->
+              <div id="incidentPreviews" class="d-flex gap-2 flex-wrap mt-2"></div>
+            </div>
+          </div>
+
+          <!-- Canvas oculto para convertir la imagen a base64 -->
+          <canvas id="incidentCanvas" class="d-none"></canvas>
+
+
+          <div id="incidentError" class="alert alert-danger d-none small"></div>
+        </div>
+
+        <div class="modal-footer border-0 d-flex justify-content-between">
+          <button type="button" class="btn btn-outline-secondary flex-fill me-2" data-bs-dismiss="modal">
+            Cancelar
+          </button>
+          <button type="button" class="btn btn-danger flex-fill ms-2" id="btnSendIncident">
+            Enviar Reporte
+          </button>
+        </div>
+
       </div>
     </div>
-
-    <!-- Previsualizaciones de fotos capturadas -->
-    <div id="incidentPreviews" class="d-flex gap-2 flex-wrap mt-2"></div>
   </div>
-</div>
 
-<!-- Canvas oculto para convertir la imagen a base64 -->
-<canvas id="incidentCanvas" class="d-none"></canvas>
-
-
-        <div id="incidentError" class="alert alert-danger d-none small"></div>
-      </div>
-
-      <div class="modal-footer border-0 d-flex justify-content-between">
-        <button type="button" class="btn btn-outline-secondary flex-fill me-2" data-bs-dismiss="modal">
-          Cancelar
-        </button>
-        <button type="button" class="btn btn-danger flex-fill ms-2" id="btnSendIncident">
-          Enviar Reporte
-        </button>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-<script src="/FrontHotel/js/auth.js"></script>
+  <script src="../js/auth.js"></script>
   <script>
     // Solo permite LIMPIEZA; RECEPCION será redirigido
     checkAuth(['LIMPIEZA']);
   </script>
   <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pouchdb@9.0.0/dist/pouchdb.min.js"></script>
-  <script src="/FrontHotel/js/db.js"></script>
-  <script src="/FrontHotel/js/camarera-dashboard.js"></script>
-  
+  <script src="../js/db.js"></script>
+  <script src="../js/camarera-dashboard.js"></script>
+
 </body>
+
 </html>
