--- a/FrontHotel/pages/habitaciones.html
+++ b/FrontHotel/pages/habitaciones.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8">
   <title>Hotel Housekeeping - Habitaciones</title>
   <!-- Indica a Safari que la aplicación puede ejecutarse en modo fullscreen/standalone -->
-<meta name="apple-mobile-web-app-capable" content="yes">
-<!-- Define el estilo de la barra de estado (hora, batería) en iOS -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<!-- Icono principal de alta resolución para la pantalla de inicio de iOS -->
-<link rel="apple-touch-icon" href="/FrontHotel/images/icons/180.png" sizes="180x180">
-<!-- Opcional: Icono sin el efecto de brillo que Safari aplica por defecto (si quieres control
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- Define el estilo de la barra de estado (hora, batería) en iOS -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <!-- Icono principal de alta resolución para la pantalla de inicio de iOS -->
+  <link rel="apple-touch-icon" href="../images/icons/180.png" sizes="180x180">
+  <!-- Opcional: Icono sin el efecto de brillo que Safari aplica por defecto (si quieres control
 total) -->
-<link rel="apple-touch-icon-precomposed"
-href="/FrontHotel/images/icons/180.png">
+  <link rel="apple-touch-icon-precomposed" href="../images/icons/180.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
-  >
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
   <!-- Estilos propios -->
-  <link rel="stylesheet" href="/FrontHotel/styles.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body class="bg-body-tertiary">
 
   <!-- =================== NAVBAR =================== -->
@@ -54,12 +49,9 @@ href="/FrontHotel/images/icons/180.png">
           <span class="text-muted">（Recepción）</span>
         </div>
         <!-- Icono salir -->
-        <button 
-  class="btn btn-sm btn-outline-secondary rounded-circle"
-  onclick="logout()"
->
-  <i class="bi bi-box-arrow-right"></i>
-</button>
+        <button class="btn btn-sm btn-outline-secondary rounded-circle" onclick="logout()">
+          <i class="bi bi-box-arrow-right"></i>
+        </button>
       </div>
     </div>
   </nav>
@@ -68,19 +60,20 @@ href="/FrontHotel/images/icons/180.png">
   <div class="bg-white border-bottom shadow-sm">
     <div class="container-fluid px-4">
       <ul class="nav nav-tabs border-0 mt-2 tab-nav">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" >Habitaciones</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/FrontHotel/pages/camareras.html">Camareras</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/FrontHotel/pages/incidentes.html">Incidentes</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/FrontHotel/pages/historial.html">Historial</a>
-  </li>
-</ul>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page">Habitaciones</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/camareras.html">Camareras</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/incidentes.html">Incidentes</a>
+        </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/historial.html">Historial</a>
+        </li>
+      </ul>
     </div>
   </div>
 
@@ -165,16 +158,15 @@ href="/FrontHotel/images/icons/180.png">
       </div>
     </div>
   </div>
-  <script src="/FrontHotel/js/auth.js"></script>
+  <script src="../js/auth.js"></script>
   <script>
-  // Solo RECEPCION; LIMPIEZA será mandado a camarera-dashboard
-  checkAuth(['RECEPCION']);
-</script>
+    // Solo RECEPCION; LIMPIEZA será mandado a camarera-dashboard
+    checkAuth(['RECEPCION']);
+  </script>
 
   <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  ></script>
-  <script src="/FrontHotel/js/habitaciones.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/habitaciones.js"></script>
 </body>
+
 </html>
